<resources>
    <string name="app_name">Weather</string>
    <string name="iso">Country ISO Code:</string>
    <string name="Search">Search</string>
    <string name="Current">Current:</string>
    <string name="Min">Min:</string>
    <string name="Max">Max:</string>
    <string name="City">City:</string>
    <string name="imgDesc">Weather icon</string>
    <string name="WR">xxxxxxxx</string>
    <string name="Temperature">Temperature</string>
    <string name="Description">Description:</string>
    <string name="Pressure">Pressure:</string>
    <string name="Humidity">Humidity:</string>
</resources>
