<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/holo_blue_bright"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ISO"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:hint="@string/iso" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/City" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center|top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Search"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:onClick="getData"
                android:text="@string/Search"
                android:translationY="25dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Temp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Temperature"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/WeatherIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/imgDesc" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/City"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text="@string/City"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CityN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/WR"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Current"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text="@string/Current"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CurrentL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/WR"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Min"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text="@string/Min"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/MinL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/WR"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Max"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text="@string/Max"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/MaxL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/WR"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Pres"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text="@string/Pressure"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/PresL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/WR"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Hum"
                android:layout_width="124dp"
                android:layout_height="match_parent"
                android:text="@string/Humidity"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/HumL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/WR"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/desc"
                android:layout_width="141dp"
                android:layout_height="match_parent"
                android:text="@string/Description"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/WR"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>